2009-10-27  Keishi Hattori  <casey.hattori@gmail.com>

        Reviewed by Timothy Hatcher.

        Tests for JavaScript syntax highlighter.
        https://bugs.webkit.org/show_bug.cgi?id=27147

        * inspector/javascript-syntax-highlight-expected.txt: Added.
        * inspector/javascript-syntax-highlight.html: Added.

2009-10-27  Xan Lopez  <xlopez@igalia.com>

        Skip a few more tests that are failing on and off.

        * platform/gtk/Skipped:

2009-10-27  Mads Ager  <ager@chromium.org>

        Reviewed by Adam Barth.

        [V8] Missing null check after string conversion in error reporting
        https://bugs.webkit.org/show_bug.cgi?id=30774

        Test case for toString conversion failure on an error object in
        stack overflow situations.  Test passes if it doesn't crash.
        
        * fast/dom/error-to-string-stack-overflow-expected.txt: Added.
        * fast/dom/error-to-string-stack-overflow.html: Added.

2009-10-27  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Sam Weinig.

        Re-enable the check that disallows pages with unload handlers in the page cache.

        <rdar://problem/7196485> and http://webkit.org/b/29021 

        * platform/mac/Skipped:
        * platform/win/Skipped:

2009-10-27  Xan Lopez  <xlopez@igalia.com>

        Another typo.

        * platform/gtk/Skipped:

2009-10-27  Xan Lopez  <xlopez@igalia.com>

        Fix typo in test names.

        * platform/gtk/Skipped:

2009-10-27  Xan Lopez  <xlopez@igalia.com>

        Skip a few tests with links to their tracking bugs.

        * platform/gtk/Skipped:

2009-10-26  Daniel Bates  <dbates@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=30491

        Test that the <isindex> element can be submitted without being enclosed
        within a <form> element. Also tests that the href property of the <base>
        element can be used to direct where the submission is sent.
