@@ -1,0 +1,6 @@
+This tests shrinking a selection with shift-up after extending it with shift-PageDown.
+
+This test does not run interactively. It uses the event sender to do mouse clicks. To run it manually, press shift-PagDown. Then press shift-up. The selection should only include the lines with "YES".
+
+
+SUCCESS: The selection shrunk correctly
